# camera_manager

./: .gitignore  Dockerfile  InstallPackages.sh  PENDIENTE.txt  docker-compose.yml  pyproject.toml
cameras/: models.py
cameras/migrations/: 0003_auto_20200406_2133.py  0004_auto_20200406_2139.py
camerasdjango/: Dockerfile
camerasdjango/api_manager/: urls.py  views.py
camerasdjango/cameras/: models.py  urls.py  views.py
camerasdjango/cameras/migrations/: 0001_initial.py  0002_camera_user.py  0002_camera_web_cam.py  0005_auto_20200412_0342.py  0006_camera_user.py  0007_auto_20200520_2256.py
camerasdjango/core/: models.py  settings.py  urls.py  utils.py  view_utils.py  views.py
camerasdjango/core/migrations/: 0001_initial.py
camerasdjango/face_recognition/: models.py  urls.py  views.py
camerasdjango/face_recognition/migrations/: 0001_initial.py  0003_facesmodel.py  0004_auto_20200412_1635.py
camerasdjango/static/: main.css
camerasdjango/static/js/: overrides.js
camerasdjango/templates/cam/: cam_add.html  cam_list.html
camerasdjango/templates/core/: base.html  navigation.html
camerasdjango/templates/face_recognition/: dashboard.html  (+1 more)
camerasdjango/users/: admin.py  forms.py  models.py  urls.py  views.py
core/: settings.py
etc/: docker.nginx.conf
etc/nginx/: docker.nginx.conf  supervisor.nginx.conf
etc/supervisor/: cameras.conf
face_recognition/: apps.py  models.py  urls.py  views.py
face_recognition/migrations/: 0002_auto_20200405_2300.py
templates/cam/: cam_list.html
templates/face_recognition/: manage_detection.html
(+20 files in other folders)
